# my-fastapi

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: build.yaml
app/: __init__.py  main.py
app/application/service/: auth_service.py  password_service.py  user_service.py
app/domain/entity/: mixin.py  user.py
app/domain/repository/: user_repository.py
app/domain/value_object/: auth_value_object.py
app/infrastructure/cmd/: seed.py
app/infrastructure/config/: celery.py  logging.py  setting.py
app/infrastructure/db/: __init__.py  connection_pool.py
app/infrastructure/helper/: log_helper.py  template_helper.py
app/infrastructure/http/: middleware.py  response.py
app/infrastructure/smtp/: send_mail.py
app/infrastructure/task/: mail_task.py
app/infrastructure/template/: 404.html
app/presentation/api/: auth_api.py  user_api.py
app/presentation/dependency/: db.py
app/presentation/dto/: auth_dto.py  user_dto.py
migration/: env.py
migration/versions/: 195e8cd3df2b_init_db.py
tests/: conftest.py
tests/application/service/: test_auth_service.py  test_password_service.py
tests/application/use_case/: test_authenticate_use_case.py
tests/domain/repository/: test_user_repository.py
tests/infrastructure/cmd/: test_seed.py
tests/infrastructure/config/: test_setting.py
tests/infrastructure/db/: test_connection_pool.py
tests/infrastructure/helper/: test_log_helper.py  test_template_helper.py
tests/presentation/: conftest.py
(+15 files in other folders)
